--- a/scss/habitaciones/_titulo-parrafo.scss
+++ b/scss/habitaciones/_titulo-parrafo.scss
@@ -37,11 +37,11 @@
 }
 
 /* Para destacar el texto contra las imágenes */
-@media (min-width: 768px) {
-  .col-md-4 {
-    padding-right: 3rem !important;
-  }
-}
+// @media (min-width: 768px) {
+//   .col-md-4 {
+//     padding-right: 3rem !important;
+//   }
+// }
 
 /* Efecto al pasar el mouse */
 a[data-lightbox] img {
