--- a/css/main.css
+++ b/css/main.css
@@ -346,14 +346,14 @@ footer img {
 }
 
 .carousel-slide {
-  max-width: 900px;
+  max-width: 1000px;
   margin: 40px auto;
 }
 
 .carousel-slide .carousel-inner,
 .carousel-slide .carousel-item,
 .carousel-slide img {
-  height: 500px;
+  height: 700px;
 }
 
 .carousel-slide img {
@@ -748,8 +748,15 @@ ul {
 }
 .activity-card .activity-img {
   width: 100%;
-  height: 250px;
+  height: 400px;
   object-fit: cover;
+  object-position: 20% 15%;
+}
+.activity-card .activity-img-loreto {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+  object-position: 20% 60%;
 }
 .activity-card .activity-body {
   padding: 1.5rem;
