--- a/scss/actividades/_actividades-style.scss
+++ b/scss/actividades/_actividades-style.scss
@@ -14,8 +14,16 @@
 
   .activity-img {
     width: 100%;
-    height: 250px;
+    height: 400px;
     object-fit: cover;
+    object-position: 20% 15%;
+  }
+
+    .activity-img-loreto {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    object-position: 20% 60%;
   }
 
   .activity-body {
