correccion de margin en quienes somos mobile

--- a/css/main.css
+++ b/css/main.css
@@ -589,6 +589,12 @@ h2 {
     text-align: center;
   }
 }
+@media (max-width: 767.98px) {
+  .parrafo-principal {
+    margin-left: 15px !important;
+    margin-right: 15px !important;
+  }
+}
 .texto-principal {
   display: flex;
   flex-direction: column;
