--- a/scss/general/_mq.scss
+++ b/scss/general/_mq.scss
@@ -226,3 +226,9 @@ h2 {
     text-align: center;
   }
 }
+@media (max-width: 767.98px) {
+  .parrafo-principal {
+    margin-left: 15px !important;
+    margin-right: 15px !important;
+  }
+}
